<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="presionarRadioButton"
    android:outlineAmbientShadowColor="@color/gray"
    android:outlineSpotShadowColor="@color/gray">

    <RadioGroup
        android:id="@+id/grupo_de_input"
        android:layout_width="345dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="130dp"
        android:onClick="presionarRadioButton"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_decimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="presionarRadioButton"
            android:text="@string/radio_decimal" />

        <RadioButton
            android:id="@+id/radio_binario"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:onClick="presionarRadioButton"
            android:text="@string/radio_binario" />

        <RadioButton
            android:id="@+id/radio_octal"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:onClick="presionarRadioButton"
            android:text="@string/radio_octal" />

        <RadioButton
            android:id="@+id/radio_hexadecimal"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:onClick="presionarRadioButton"
            android:text="@string/radio_hexadecimal" />
    </RadioGroup>

    <TextView
        android:id="@+id/txt_titulo_conversor"
        android:layout_width="193dp"
        android:layout_height="45dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="40dp"
        android:text="@string/txt_conversor"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/caja_numero_a_convertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="272dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_caja"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/caja_binario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="380dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_caja"
        app:layout_constraintStart_toEndOf="@+id/checkBox_binario"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/caja_octal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="448dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_caja"
        app:layout_constraintStart_toEndOf="@+id/checkBox_octal"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/caja_hexadecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="520dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_caja"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_ingresa_numero"
        android:layout_width="106dp"
        android:layout_height="29dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="240dp"
        android:text="@string/txt_ingresa_numero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_binario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="376dp"
        android:text="@string/radio_binario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_octal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="444dp"
        android:text="@string/radio_octal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_hexadecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="516dp"
        android:text="@string/radio_hexadecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>